--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
+    "react-html2pdf": "^1.0.1",
     "react-i18next": "^13.2.2",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
