--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-query": "^5.0.5",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "html2pdf.js": "^0.10.1",
     "i18next": "^23.5.1",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.0",
+    "pdfjs-dist": "^3.8.162",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
@@ -32,6 +38,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "redux": "^4.2.1",
     "sweetalert2": "^11.7.31"
   },
   "devDependencies": {
@@ -44,6 +51,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.30",
+    "sass": "^1.69.4",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   }
