--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "i18next": "^23.5.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.7.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
     "pdfjs-dist": "^3.8.162",
